# prompt-diff

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: RUNBOOK.md
docs/assets/: architecture.mmd
docs/maintenance/: bug-triage-playbook.md  editor-standards.md  feature-intake-guide.md  git-attributes-policy.md  pull-request-review-guide.md
docs/operating-model/: architecture-decisions.md  project-scope-baseline.md  roadmap-2026.md
docs/quality/: testing-strategy.md
docs/release/: release-process-checklist.md
examples/: baseline.txt  candidate.txt
frontend/: app.js  index.html  styles.css
src/prompt_diff/: __init__.py  __main__.py  app.py  cli.py  config.py  engine.py  metrics.py  models.py  risk.py  semantic.py  tokenizer.py
tests/: conftest.py  test_app.py  test_cli.py  test_engine.py  test_risk.py  test_semantic.py  test_tokenizer.py
